JDBC connection properties to heroku postgres database configured.

--- a/pom.xml
+++ b/pom.xml
@@ -171,7 +171,17 @@
                             <version>${lombok.version}</version>
                         </path>
                     </annotationProcessorPaths>
-
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.heroku.sdk</groupId>
+                <artifactId>heroku-maven-plugin</artifactId>
+                <version>3.0.3</version>
+                <configuration>
+                    <appName>diet-master</appName>
+                    <processTypes>
+                        <web>java -jar -Dserver.port=$PORT target/${project.build.finalName}.jar</web>
+                    </processTypes>
                 </configuration>
             </plugin>
         </plugins>
