--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,15 @@
+################ DATABASE ################
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibertnate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
+
+################ MAIL-SENDER ################
+spring.mail.host=smtp.xxx.com
+spring.mail.username=xxx@xxx.com
+spring.mail.password=xxxxx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+################ SERVER ################
+server.port=8081
