Heroku deployment plugin added.

--- a/pom.xml
+++ b/pom.xml
@@ -199,7 +199,7 @@
                 <configuration>
                     <appName>diet-master</appName>
                     <processTypes>
-                        <web>java -jar -Dserver.port=$PORT target/${project.build.finalName}.jar</web>
+                        <web>java -jar -Dserver.port=$PORT -Dspring.profiles.active=prod target/${project.build.finalName}.jar</web>
                     </processTypes>
                 </configuration>
             </plugin>
