Maven test profile activation value fixed.

--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,9 @@
             <activation>
                 <property>
                     <name>environment</name>
-                    <value>true</value>
+                    <value>test</value>
                 </property>
             </activation>
-            <properties>
-                <spring.profiles.active>dev</spring.profiles.active>
-            </properties>
         </profile>
         <profile>
             <id>dev</id>
