Duplicated profile id in pom.xml removed.

--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <profiles>
         <profile>
-            <id>dev</id>
+            <id>test</id>
             <activation>
                 <property>
                     <name>environment</name>
