SMTP server changed to GMAIL smtp. Activation email are now lead to main inbox.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,26 @@
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 ################ MAIL-SENDER ################
-spring.mail.host=smtp-relay.sendinblue.com
-spring.mail.username=bgraczyk.mail@gmail.com
-spring.mail.password=ZTWqbHKIjm5Avx2X
+#spring.mail.host=smtp.gmail.com
+#spring.mail.username=noreply.dietmaster@gmail.com
+#spring.mail.password=DietMaster_123
+#spring.mail.port=465
+#spring.mail.properties.mail.smtp.auth=true
+##spring.mail.properties.mail.smtp.starttls.enable=true
+##spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.ssl.enable=true
+#spring.mail.default-encoding=UTF-8
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.debug=true
+#spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.host=smtp.gmail.com
 spring.mail.port=587
+spring.mail.username=noreply.dietmaster@gmail.com
+spring.mail.password=DietMaster_123
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.default-encoding=UTF-8
 spring.mail.protocol=smtp
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 ################ SERVER ################
 server.port=8081
