Implemented NutrientController. Small fixes. Added request files.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+################ CONFIG ################
+spring.profiles.active=@spring.profiles.active@
 ################ DATABASE ################
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
