--- a/pom.xml
+++ b/pom.xml
@@ -48,7 +48,7 @@
     </profiles>
 
     <properties>
-        <java.version>15</java.version>
+        <java.version>11.0.11</java.version>
         <testcontainers.version>1.15.3</testcontainers.version>
         <mapstruct.version>1.4.2.Final</mapstruct.version>
         <lombok.version>1.18.20</lombok.version>
@@ -174,6 +174,12 @@
             <artifactId>spring-orm</artifactId>
             <version>5.3.7</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.modelmapper</groupId>
+            <artifactId>modelmapper</artifactId>
+            <version>2.4.2</version>
+        </dependency>
     </dependencies>
     
 
@@ -237,6 +243,14 @@
                 </configuration>
             </plugin>
         </plugins>
+
+
+        <resources>
+            <resource>
+                <directory>src/main/resources</directory>
+                <filtering>true</filtering>
+            </resource>
+        </resources>
     </build>
 
 </project>
