--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,12 @@
             <artifactId>modelmapper</artifactId>
             <version>2.4.2</version>
         </dependency>
+        <dependency>
+            <groupId>com.squareup.okhttp</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>2.7.5</version>
+        </dependency>
+
     </dependencies>
     
 
